Popular Dishes update

--- a/src/frontend/lang/ar.json
+++ b/src/frontend/lang/ar.json
@@ -20,5 +20,7 @@
     "None": "لا يوجد",
     "welcome": "مرحب حرفاىنا الاعزاء",
     "wecomeText": "مرحباً بكم في مطعمنا ، حيث تلتقي جودة المطاعم العالمية مع سرعة الوجبات العصرية. نقدم لكم تجربة طعام استثنائية مُعدة بأجود المكونات، لتستمتعوا بالرقيّ في كل قمة، والسرعة في كل طلب.",
-    "Our Offers": "عروضنا" 
+    "Our Offers": "عروضنا",
+    "PopularDishes": "الأطباق الشعبية",
+    "PopularDishesDescription": "اطيب الماكولات بافضل الاسعار"
 }
