--- a/src/frontend/lang/ar.json
+++ b/src/frontend/lang/ar.json
@@ -22,5 +22,15 @@
     "wecomeText": "مرحباً بكم في مطعمنا ، حيث تلتقي جودة المطاعم العالمية مع سرعة الوجبات العصرية. نقدم لكم تجربة طعام استثنائية مُعدة بأجود المكونات، لتستمتعوا بالرقيّ في كل قمة، والسرعة في كل طلب.",
     "Our Offers": "عروضنا",
     "PopularDishes": "الأطباق الشعبية",
-    "PopularDishesDescription": "اطيب الماكولات بافضل الاسعار"
+    "PopularDishesDescription": "اطيب الماكولات بافضل الاسعار",
+    "SpecialOffers": "العروض الخاصة",
+    "The Golden Hour": "الساعة الذهبية",
+    "VIP Fast Pass": "بطاقة المرور السريع VIP",
+    "Elite Express Dinner": "عشاء النخبة السريع",
+    "The Luxury Duo": "الثنائي الفاخر",
+    "Premium Joy Box": "صندوق السعادة الفاخر",
+    "A Bite of Luxury": "مذاق الفخامة",
+    "The 15-Min Feast": "وليمة الـ 15 دقيقة",
+    "Prestige Combo": "كومبو برستيج",
+    "Reservation": "الحجز"
 }
