--- a/src/frontend/lang/en.json
+++ b/src/frontend/lang/en.json
@@ -22,5 +22,7 @@
     "wecomeText": "Welcome to restou, where premium quality meets modern pace. We redefine fast food with a touch of luxury, using the finest ingredients to deliver an unforgettable dining experience. Indulge in excellence, served at the speed of your life.",
     "OurOffers": "Our Offers",
     "PopularDishes": "Popular Dishes",
-    "PopularDishesDescription": "Best dishes at the best prices"
+    "PopularDishesDescription": "Best dishes at the best prices",
+    "SpecialOffers": "Special Offers",
+    "SpecialOffersDescription": ""
 }
