--- a/src/frontend/lang/en.json
+++ b/src/frontend/lang/en.json
@@ -24,5 +24,7 @@
     "PopularDishes": "Popular Dishes",
     "PopularDishesDescription": "Best dishes at the best prices",
     "SpecialOffers": "Special Offers",
-    "SpecialOffersDescription": ""
+    "about": "About",
+    "Us": "Us",
+    "aboutText": "About Us: Where Luxury Meets Speed At our restaurant, we don’t just serve meals; we craft an extraordinary experience that blends the elegance of fine dining with the efficiency you need in your busy life. Our journey began with a simple passion: to redefine fast food into a culinary masterpiece, prepared with the finest fresh ingredients and secret spices meticulously selected by our master chefs. We believe every customer deserves the royal treatment. That’s why, in every dish we serve, we ensure a perfect fusion of premium quality, stunning presentation, and unforgettable flavor. Whether you’re craving a signature burger or one of our exclusive specials, we are here to deliver Luxury in every bite."
 }
