--- a/src/frontend/lang/ar.json
+++ b/src/frontend/lang/ar.json
@@ -35,5 +35,6 @@
     "Reservation": "الحجز",
     "about": "معلومات",
     "Us": "عنا",
-    "aboutText": "من نحن: حيث تلتقي الفخامة بالسرعة في مطعمنا، نحن لا نقدم مجرد وجبات، بل نصيغ تجربة استثنائية تجمع بين رقيّ المطاعم العالمية وسرعة الخدمة التي تحتاجها في يومك المزدحم. بدأت رحلتنا بشغف بسيط: إعادة تعريف مفهوم الوجبة السريعة لتصبح تحفة فنية تُطهى بأجود المكونات الطازجة والتوابل السرية التي يختارها شيفاتنا بعناية فائقة. نحن نؤمن بأن كل عميل يستحق معاملة الملوك، لذا نحرص في كل طبق نقدمه على دمج الجودة العالية مع العرض المبهر والمذاق الذي لا يُنسى. سواء كنت تبحث عن برجر مبتكر أو أطباقنا الخاصة، فنحن هنا لنقدم لك الفخامة في كل قضمة" 
+    "aboutText": "من نحن: حيث تلتقي الفخامة بالسرعة في مطعمنا، نحن لا نقدم مجرد وجبات، بل نصيغ تجربة استثنائية تجمع بين رقيّ المطاعم العالمية وسرعة الخدمة التي تحتاجها في يومك المزدحم. بدأت رحلتنا بشغف بسيط: إعادة تعريف مفهوم الوجبة السريعة لتصبح تحفة فنية تُطهى بأجود المكونات الطازجة والتوابل السرية التي يختارها شيفاتنا بعناية فائقة. نحن نؤمن بأن كل عميل يستحق معاملة الملوك، لذا نحرص في كل طبق نقدمه على دمج الجودة العالية مع العرض المبهر والمذاق الذي لا يُنسى. سواء كنت تبحث عن برجر مبتكر أو أطباقنا الخاصة، فنحن هنا لنقدم لك الفخامة في كل قضمة",
+    "ChefsText": "نخبة الطهاة.. شغف الإتقان في كل طبق."
 }
