--- a/src/frontend/lang/ar.json
+++ b/src/frontend/lang/ar.json
@@ -36,5 +36,11 @@
     "about": "معلومات",
     "Us": "عنا",
     "aboutText": "من نحن: حيث تلتقي الفخامة بالسرعة في مطعمنا، نحن لا نقدم مجرد وجبات، بل نصيغ تجربة استثنائية تجمع بين رقيّ المطاعم العالمية وسرعة الخدمة التي تحتاجها في يومك المزدحم. بدأت رحلتنا بشغف بسيط: إعادة تعريف مفهوم الوجبة السريعة لتصبح تحفة فنية تُطهى بأجود المكونات الطازجة والتوابل السرية التي يختارها شيفاتنا بعناية فائقة. نحن نؤمن بأن كل عميل يستحق معاملة الملوك، لذا نحرص في كل طبق نقدمه على دمج الجودة العالية مع العرض المبهر والمذاق الذي لا يُنسى. سواء كنت تبحث عن برجر مبتكر أو أطباقنا الخاصة، فنحن هنا لنقدم لك الفخامة في كل قضمة",
-    "ChefsText": "نخبة الطهاة.. شغف الإتقان في كل طبق."
+    "ChefsText": "نخبة الطهاة.. شغف الإتقان في كل طبق.",
+    "We don’t just race time; we beat it. Your favorite meal arrives hot, as if it just left our kitchen": "نحن لا نسابق الزمن، بل نتفوق عليه. وجبتك المفضلة تصلك ساخنة وكأنها خرجت للتو من المطبخ",
+    "Stay in control. Track your order's journey step-by-step, from the moment it’s prepped until it reaches your hands": "كن في قلب الحدث. تتبع رحلة طلبك خطوة بخطوة من لحظة التحضير وحتى وصوله إلى يدك",
+    "Your safety is our priority. We guarantee secure packaging and world-class quality standards that preserve the taste and luxury of our dishes": "سلامتك هي أولويتنا. نحن نضمن التغليف الآمن ومعايير الجودة العالمية التي تحافظ على طعم وفخامة أطباقنا",
+    "Fast Delivery": "توصيل سريع",
+    "Order Tracking": "تتبع الطلب",
+    "Safety & Quality": "السلامة والجودة"
 }
