Opening Hours update

--- a/src/frontend/lang/ar.json
+++ b/src/frontend/lang/ar.json
@@ -42,5 +42,8 @@
     "Your safety is our priority. We guarantee secure packaging and world-class quality standards that preserve the taste and luxury of our dishes": "سلامتك هي أولويتنا. نحن نضمن التغليف الآمن ومعايير الجودة العالمية التي تحافظ على طعم وفخامة أطباقنا",
     "Fast Delivery": "توصيل سريع",
     "Order Tracking": "تتبع الطلب",
-    "Safety & Quality": "السلامة والجودة"
+    "Safety & Quality": "السلامة والجودة",
+    "Order Now": "الحجز الآن",
+    "Restaurant": "المطعم",
+    "OpeningHoursText": "نحن نعمل جميع أيام الجمعة من 10:00 صباحاً إلى 22:00 مساءً، باستثناء الاثنين"
 }
