--- a/src/frontend/lang/ar.json
+++ b/src/frontend/lang/ar.json
@@ -45,5 +45,7 @@
     "Safety & Quality": "السلامة والجودة",
     "Order Now": "الحجز الآن",
     "Restaurant": "المطعم",
-    "OpeningHoursText": "نحن نعمل جميع أيام الجمعة من 10:00 صباحاً إلى 22:00 مساءً، باستثناء الاثنين"
+    "OpeningHoursText": "نحن نعمل جميع أيام الجمعة من 10:00 صباحاً إلى 22:00 مساءً، باستثناء الاثنين",
+    "farewell": "سعدنا بزيارتك، ونتطلع لاستقبالك مرة أخرى لتجربة استثنائية",
+    "location": "بن عروس, المروج 5"
 }
