--- a/src/frontend/lang/en.json
+++ b/src/frontend/lang/en.json
@@ -28,5 +28,7 @@
     "Us": "Us",
     "aboutText": "About Us: Where Luxury Meets Speed At our restaurant, we don’t just serve meals; we craft an extraordinary experience that blends the elegance of fine dining with the efficiency you need in your busy life. Our journey began with a simple passion: to redefine fast food into a culinary masterpiece, prepared with the finest fresh ingredients and secret spices meticulously selected by our master chefs. We believe every customer deserves the royal treatment. That’s why, in every dish we serve, we ensure a perfect fusion of premium quality, stunning presentation, and unforgettable flavor. Whether you’re craving a signature burger or one of our exclusive specials, we are here to deliver Luxury in every bite.",
     "ChefsText": "Meet Our Chefs: Passion for Perfection in Every Plate",
-    "OpeningHoursText": "We work all days Friday from 10:00 AM to 22:00 PM except Monday"
+    "OpeningHoursText": "We work all days Friday from 10:00 AM to 22:00 PM except Monday",
+    "farewell": "We enjoyed your visit and look forward to welcoming you back for an exceptional experience",
+    "location": "ben arous, mourouj 4"
 }
