--- a/src/frontend/lang/ar.json
+++ b/src/frontend/lang/ar.json
@@ -47,5 +47,9 @@
     "Restaurant": "المطعم",
     "OpeningHoursText": "نحن نعمل جميع أيام الجمعة من 10:00 صباحاً إلى 22:00 مساءً، باستثناء الاثنين",
     "farewell": "سعدنا بزيارتك، ونتطلع لاستقبالك مرة أخرى لتجربة استثنائية",
-    "location": "بن عروس, المروج 5"
+    "location": "بن عروس, المروج 5",
+    "Opening Hours": "ساعات العمل",
+    "fast food spesialist": "متخصص في الاكلات السريعة",
+    "Luxurious food spesialist": "متخصصة في الأغذية الفاخرة",
+    "Trap food spesialist": "متخصص في الحلويات"
 }
